// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateModuleH can generate fixture SampleWithUppercaseName 1`] = `
Map {
  "SampleWithUppercaseNameJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


  class JSI_EXPORT NativeSampleTurboModuleCxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModule\\";

protected:
  NativeSampleTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeSampleTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    

  private:
    friend class NativeSampleTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture complex_objects 1`] = `
Map {
  "complex_objectsJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


  class JSI_EXPORT NativeSampleTurboModuleCxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual jsi::Object difficult(jsi::Runtime &rt, jsi::Object A) = 0;
  virtual void optionals(jsi::Runtime &rt, jsi::Object A) = 0;
  virtual void optionalMethod(jsi::Runtime &rt, jsi::Object options, jsi::Function callback, std::optional<jsi::Array> extras) = 0;
  virtual void getArrays(jsi::Runtime &rt, jsi::Object options) = 0;
  virtual std::optional<jsi::Object> getNullableObject(jsi::Runtime &rt) = 0;
  virtual std::optional<jsi::Object> getNullableGenericObject(jsi::Runtime &rt) = 0;
  virtual std::optional<jsi::Array> getNullableArray(jsi::Runtime &rt) = 0;

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModule\\";

protected:
  NativeSampleTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeSampleTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    jsi::Object difficult(jsi::Runtime &rt, jsi::Object A) override {
      static_assert(
          bridging::getParameterCount(&T::difficult) == 2,
          \\"Expected difficult(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::difficult, jsInvoker_, instance_, std::move(A));
    }
    void optionals(jsi::Runtime &rt, jsi::Object A) override {
      static_assert(
          bridging::getParameterCount(&T::optionals) == 2,
          \\"Expected optionals(...) to have 2 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::optionals, jsInvoker_, instance_, std::move(A));
    }
    void optionalMethod(jsi::Runtime &rt, jsi::Object options, jsi::Function callback, std::optional<jsi::Array> extras) override {
      static_assert(
          bridging::getParameterCount(&T::optionalMethod) == 4,
          \\"Expected optionalMethod(...) to have 4 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::optionalMethod, jsInvoker_, instance_, std::move(options), std::move(callback), std::move(extras));
    }
    void getArrays(jsi::Runtime &rt, jsi::Object options) override {
      static_assert(
          bridging::getParameterCount(&T::getArrays) == 2,
          \\"Expected getArrays(...) to have 2 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::getArrays, jsInvoker_, instance_, std::move(options));
    }
    std::optional<jsi::Object> getNullableObject(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getNullableObject) == 1,
          \\"Expected getNullableObject(...) to have 1 parameters\\");

      return bridging::callFromJs<std::optional<jsi::Object>>(
          rt, &T::getNullableObject, jsInvoker_, instance_);
    }
    std::optional<jsi::Object> getNullableGenericObject(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getNullableGenericObject) == 1,
          \\"Expected getNullableGenericObject(...) to have 1 parameters\\");

      return bridging::callFromJs<std::optional<jsi::Object>>(
          rt, &T::getNullableGenericObject, jsInvoker_, instance_);
    }
    std::optional<jsi::Array> getNullableArray(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getNullableArray) == 1,
          \\"Expected getNullableArray(...) to have 1 parameters\\");

      return bridging::callFromJs<std::optional<jsi::Array>>(
          rt, &T::getNullableArray, jsInvoker_, instance_);
    }

  private:
    friend class NativeSampleTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture cxx_only_native_modules 1`] = `
Map {
  "cxx_only_native_modulesJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


#pragma mark - NativeSampleTurboModuleEnumInt

enum class NativeSampleTurboModuleEnumInt { IA, IB };

template <>
struct Bridging<NativeSampleTurboModuleEnumInt> {
  static NativeSampleTurboModuleEnumInt fromJs(jsi::Runtime &rt, const jsi::Value &rawValue) {
    double value = (double)rawValue.asNumber();
    if (value == 23) {
      return NativeSampleTurboModuleEnumInt::IA;
    } else if (value == 42) {
      return NativeSampleTurboModuleEnumInt::IB;
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for value in NativeSampleTurboModuleEnumInt\\");
    }
  }

  static jsi::Value toJs(jsi::Runtime &rt, NativeSampleTurboModuleEnumInt value) {
    if (value == NativeSampleTurboModuleEnumInt::IA) {
      return bridging::toJs(rt, 23);
    } else if (value == NativeSampleTurboModuleEnumInt::IB) {
      return bridging::toJs(rt, 42);
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for enum value in NativeSampleTurboModuleEnumInt\\");
    }
  }
};

#pragma mark - NativeSampleTurboModuleEnumFloat

enum class NativeSampleTurboModuleEnumFloat { FA, FB };

template <>
struct Bridging<NativeSampleTurboModuleEnumFloat> {
  static NativeSampleTurboModuleEnumFloat fromJs(jsi::Runtime &rt, const jsi::Value &rawValue) {
    double value = (double)rawValue.asNumber();
    if (value == 1.23) {
      return NativeSampleTurboModuleEnumFloat::FA;
    } else if (value == 4.56) {
      return NativeSampleTurboModuleEnumFloat::FB;
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for value in NativeSampleTurboModuleEnumFloat\\");
    }
  }

  static jsi::Value toJs(jsi::Runtime &rt, NativeSampleTurboModuleEnumFloat value) {
    if (value == NativeSampleTurboModuleEnumFloat::FA) {
      return bridging::toJs(rt, 1.23);
    } else if (value == NativeSampleTurboModuleEnumFloat::FB) {
      return bridging::toJs(rt, 4.56);
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for enum value in NativeSampleTurboModuleEnumFloat\\");
    }
  }
};

#pragma mark - NativeSampleTurboModuleEnumNone

enum class NativeSampleTurboModuleEnumNone { NA, NB };

template <>
struct Bridging<NativeSampleTurboModuleEnumNone> {
  static NativeSampleTurboModuleEnumNone fromJs(jsi::Runtime &rt, const jsi::String &rawValue) {
    std::string value = rawValue.utf8(rt);
    if (value == \\"NA\\") {
      return NativeSampleTurboModuleEnumNone::NA;
    } else if (value == \\"NB\\") {
      return NativeSampleTurboModuleEnumNone::NB;
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for value in NativeSampleTurboModuleEnumNone\\");
    }
  }

  static jsi::String toJs(jsi::Runtime &rt, NativeSampleTurboModuleEnumNone value) {
    if (value == NativeSampleTurboModuleEnumNone::NA) {
      return bridging::toJs(rt, \\"NA\\");
    } else if (value == NativeSampleTurboModuleEnumNone::NB) {
      return bridging::toJs(rt, \\"NB\\");
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for enum value in NativeSampleTurboModuleEnumNone\\");
    }
  }
};

#pragma mark - NativeSampleTurboModuleEnumStr

enum class NativeSampleTurboModuleEnumStr { SA, SB };

template <>
struct Bridging<NativeSampleTurboModuleEnumStr> {
  static NativeSampleTurboModuleEnumStr fromJs(jsi::Runtime &rt, const jsi::String &rawValue) {
    std::string value = rawValue.utf8(rt);
    if (value == \\"s---a\\") {
      return NativeSampleTurboModuleEnumStr::SA;
    } else if (value == \\"s---b\\") {
      return NativeSampleTurboModuleEnumStr::SB;
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for value in NativeSampleTurboModuleEnumStr\\");
    }
  }

  static jsi::String toJs(jsi::Runtime &rt, NativeSampleTurboModuleEnumStr value) {
    if (value == NativeSampleTurboModuleEnumStr::SA) {
      return bridging::toJs(rt, \\"s---a\\");
    } else if (value == NativeSampleTurboModuleEnumStr::SB) {
      return bridging::toJs(rt, \\"s---b\\");
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for enum value in NativeSampleTurboModuleEnumStr\\");
    }
  }
};
  
#pragma mark - NativeSampleTurboModuleConstantsStruct

template <typename P0, typename P1, typename P2>
struct NativeSampleTurboModuleConstantsStruct {
  P0 const1{};
  P1 const2{};
  P2 const3{};

  bool operator==(const NativeSampleTurboModuleConstantsStruct &other) const {
    return const1 == other.const1 && const2 == other.const2 && const3 == other.const3;
  }
};

template <typename T>
struct NativeSampleTurboModuleConstantsStructBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.const1)>(rt, value.getProperty(rt, \\"const1\\"), jsInvoker),
      bridging::fromJs<decltype(types.const2)>(rt, value.getProperty(rt, \\"const2\\"), jsInvoker),
      bridging::fromJs<decltype(types.const3)>(rt, value.getProperty(rt, \\"const3\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static bool const1ToJs(jsi::Runtime &rt, decltype(types.const1) value) {
    return bridging::toJs(rt, value);
  }

  static double const2ToJs(jsi::Runtime &rt, decltype(types.const2) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String const3ToJs(jsi::Runtime &rt, decltype(types.const3) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"const1\\", bridging::toJs(rt, value.const1, jsInvoker));
    result.setProperty(rt, \\"const2\\", bridging::toJs(rt, value.const2, jsInvoker));
    result.setProperty(rt, \\"const3\\", bridging::toJs(rt, value.const3, jsInvoker));
    return result;
  }
};




#pragma mark - NativeSampleTurboModuleBinaryTreeNode

template <typename P0>
struct NativeSampleTurboModuleBinaryTreeNode {
  std::unique_ptr<NativeSampleTurboModuleBinaryTreeNode<P0>> left{};
  P0 value{};
  std::unique_ptr<NativeSampleTurboModuleBinaryTreeNode<P0>> right{};

  bool operator==(const NativeSampleTurboModuleBinaryTreeNode &other) const {
    return left == other.left && value == other.value && right == other.right;
  }
};

template <typename T>
struct NativeSampleTurboModuleBinaryTreeNodeBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      value.hasProperty(rt, \\"left\\") ? std::make_unique<T>(bridging::fromJs<T>(rt, value.getProperty(rt, \\"left\\"), jsInvoker)) : nullptr,
      bridging::fromJs<decltype(types.value)>(rt, value.getProperty(rt, \\"value\\"), jsInvoker),
      value.hasProperty(rt, \\"right\\") ? std::make_unique<T>(bridging::fromJs<T>(rt, value.getProperty(rt, \\"right\\"), jsInvoker)) : nullptr};
    return result;
  }

#ifdef DEBUG
  static jsi::Object leftToJs(jsi::Runtime &rt, decltype(types.left) value) {
    return bridging::toJs(rt, value);
  }

  static double valueToJs(jsi::Runtime &rt, decltype(types.value) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Object rightToJs(jsi::Runtime &rt, decltype(types.right) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    if (value.left) {
        result.setProperty(rt, \\"left\\", bridging::toJs(rt, *value.left, jsInvoker));
      }
    result.setProperty(rt, \\"value\\", bridging::toJs(rt, value.value, jsInvoker));
    if (value.right) {
        result.setProperty(rt, \\"right\\", bridging::toJs(rt, *value.right, jsInvoker));
      }
    return result;
  }
};



#pragma mark - NativeSampleTurboModuleGraphNode

template <typename P0>
struct NativeSampleTurboModuleGraphNode {
  P0 label{};
  std::optional<std::vector<NativeSampleTurboModuleGraphNode<P0>>> neighbors{};

  bool operator==(const NativeSampleTurboModuleGraphNode &other) const {
    return label == other.label && neighbors == other.neighbors;
  }
};

template <typename T>
struct NativeSampleTurboModuleGraphNodeBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.label)>(rt, value.getProperty(rt, \\"label\\"), jsInvoker),
      bridging::fromJs<decltype(types.neighbors)>(rt, value.getProperty(rt, \\"neighbors\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static jsi::String labelToJs(jsi::Runtime &rt, decltype(types.label) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Array neighborsToJs(jsi::Runtime &rt, decltype(types.neighbors) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"label\\", bridging::toJs(rt, value.label, jsInvoker));
    if (value.neighbors) {
      result.setProperty(rt, \\"neighbors\\", bridging::toJs(rt, value.neighbors.value(), jsInvoker));
    }
    return result;
  }
};



#pragma mark - NativeSampleTurboModuleObjectStruct

template <typename P0, typename P1, typename P2>
struct NativeSampleTurboModuleObjectStruct {
  P0 a{};
  P1 b{};
  P2 c{};

  bool operator==(const NativeSampleTurboModuleObjectStruct &other) const {
    return a == other.a && b == other.b && c == other.c;
  }
};

template <typename T>
struct NativeSampleTurboModuleObjectStructBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.a)>(rt, value.getProperty(rt, \\"a\\"), jsInvoker),
      bridging::fromJs<decltype(types.b)>(rt, value.getProperty(rt, \\"b\\"), jsInvoker),
      bridging::fromJs<decltype(types.c)>(rt, value.getProperty(rt, \\"c\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static double aToJs(jsi::Runtime &rt, decltype(types.a) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String bToJs(jsi::Runtime &rt, decltype(types.b) value) {
    return bridging::toJs(rt, value);
  }

  static std::optional<jsi::String> cToJs(jsi::Runtime &rt, decltype(types.c) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"a\\", bridging::toJs(rt, value.a, jsInvoker));
    result.setProperty(rt, \\"b\\", bridging::toJs(rt, value.b, jsInvoker));
    if (value.c) {
      result.setProperty(rt, \\"c\\", bridging::toJs(rt, value.c.value(), jsInvoker));
    }
    return result;
  }
};



#pragma mark - NativeSampleTurboModuleValueStruct

template <typename P0, typename P1, typename P2>
struct NativeSampleTurboModuleValueStruct {
  P0 x{};
  P1 y{};
  P2 z{};

  bool operator==(const NativeSampleTurboModuleValueStruct &other) const {
    return x == other.x && y == other.y && z == other.z;
  }
};

template <typename T>
struct NativeSampleTurboModuleValueStructBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.x)>(rt, value.getProperty(rt, \\"x\\"), jsInvoker),
      bridging::fromJs<decltype(types.y)>(rt, value.getProperty(rt, \\"y\\"), jsInvoker),
      bridging::fromJs<decltype(types.z)>(rt, value.getProperty(rt, \\"z\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static double xToJs(jsi::Runtime &rt, decltype(types.x) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String yToJs(jsi::Runtime &rt, decltype(types.y) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Object zToJs(jsi::Runtime &rt, decltype(types.z) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"x\\", bridging::toJs(rt, value.x, jsInvoker));
    result.setProperty(rt, \\"y\\", bridging::toJs(rt, value.y, jsInvoker));
    result.setProperty(rt, \\"z\\", bridging::toJs(rt, value.z, jsInvoker));
    return result;
  }
};



#pragma mark - NativeSampleTurboModuleMenuItem

template <typename P0, typename P1, typename P2>
struct NativeSampleTurboModuleMenuItem {
  P0 label{};
  P1 onPress{};
  P2 shortcut{};
  std::optional<std::vector<NativeSampleTurboModuleMenuItem<P0, P1, P2>>> items{};

  bool operator==(const NativeSampleTurboModuleMenuItem &other) const {
    return label == other.label && onPress == other.onPress && shortcut == other.shortcut && items == other.items;
  }
};

template <typename T>
struct NativeSampleTurboModuleMenuItemBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.label)>(rt, value.getProperty(rt, \\"label\\"), jsInvoker),
      bridging::fromJs<decltype(types.onPress)>(rt, value.getProperty(rt, \\"onPress\\"), jsInvoker),
      bridging::fromJs<decltype(types.shortcut)>(rt, value.getProperty(rt, \\"shortcut\\"), jsInvoker),
      bridging::fromJs<decltype(types.items)>(rt, value.getProperty(rt, \\"items\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static jsi::String labelToJs(jsi::Runtime &rt, decltype(types.label) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Function onPressToJs(jsi::Runtime &rt, decltype(types.onPress) value) {
    return bridging::toJs(rt, value);
  }

  static std::optional<jsi::String> shortcutToJs(jsi::Runtime &rt, decltype(types.shortcut) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Array itemsToJs(jsi::Runtime &rt, decltype(types.items) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"label\\", bridging::toJs(rt, value.label, jsInvoker));
    result.setProperty(rt, \\"onPress\\", bridging::toJs(rt, value.onPress, jsInvoker));
    if (value.shortcut) {
      result.setProperty(rt, \\"shortcut\\", bridging::toJs(rt, value.shortcut.value(), jsInvoker));
    }
    if (value.items) {
      result.setProperty(rt, \\"items\\", bridging::toJs(rt, value.items.value(), jsInvoker));
    }
    return result;
  }
};

class JSI_EXPORT NativeSampleTurboModuleCxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual jsi::Array getArray(jsi::Runtime &rt, jsi::Array arg) = 0;
  virtual bool getBool(jsi::Runtime &rt, bool arg) = 0;
  virtual jsi::Object getConstants(jsi::Runtime &rt) = 0;
  virtual jsi::Value getCustomEnum(jsi::Runtime &rt, jsi::Value arg) = 0;
  virtual jsi::Object getCustomHostObject(jsi::Runtime &rt) = 0;
  virtual jsi::String consumeCustomHostObject(jsi::Runtime &rt, jsi::Object customHostObject) = 0;
  virtual jsi::Object getBinaryTreeNode(jsi::Runtime &rt, jsi::Object arg) = 0;
  virtual jsi::Object getGraphNode(jsi::Runtime &rt, jsi::Object arg) = 0;
  virtual jsi::Value getNumEnum(jsi::Runtime &rt, jsi::Value arg) = 0;
  virtual jsi::String getStrEnum(jsi::Runtime &rt, jsi::String arg) = 0;
  virtual jsi::Object getMap(jsi::Runtime &rt, jsi::Object arg) = 0;
  virtual double getNumber(jsi::Runtime &rt, double arg) = 0;
  virtual jsi::Object getObject(jsi::Runtime &rt, jsi::Object arg) = 0;
  virtual jsi::Array getSet(jsi::Runtime &rt, jsi::Array arg) = 0;
  virtual jsi::String getString(jsi::Runtime &rt, jsi::String arg) = 0;
  virtual jsi::String getUnion(jsi::Runtime &rt, double x, jsi::String y, jsi::String y-literal, jsi::Object z) = 0;
  virtual jsi::Object getValue(jsi::Runtime &rt, double x, jsi::String y, jsi::Object z) = 0;
  virtual void getValueWithCallback(jsi::Runtime &rt, jsi::Function callback) = 0;
  virtual jsi::Value getValueWithPromise(jsi::Runtime &rt, bool error) = 0;
  virtual std::optional<bool> getWithWithOptionalArgs(jsi::Runtime &rt, std::optional<bool> optionalArg) = 0;
  virtual void voidFunc(jsi::Runtime &rt) = 0;
  virtual void setMenu(jsi::Runtime &rt, jsi::Object menuItem) = 0;
  virtual void emitCustomDeviceEvent(jsi::Runtime &rt, jsi::String eventName) = 0;
  virtual void voidFuncThrows(jsi::Runtime &rt) = 0;
  virtual jsi::Object getObjectThrows(jsi::Runtime &rt, jsi::Object arg) = 0;
  virtual void voidFuncAssert(jsi::Runtime &rt) = 0;
  virtual jsi::Object getObjectAssert(jsi::Runtime &rt, jsi::Object arg) = 0;

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModuleCxx\\";

protected:
  NativeSampleTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeSampleTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    jsi::Array getArray(jsi::Runtime &rt, jsi::Array arg) override {
      static_assert(
          bridging::getParameterCount(&T::getArray) == 2,
          \\"Expected getArray(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Array>(
          rt, &T::getArray, jsInvoker_, instance_, std::move(arg));
    }
    bool getBool(jsi::Runtime &rt, bool arg) override {
      static_assert(
          bridging::getParameterCount(&T::getBool) == 2,
          \\"Expected getBool(...) to have 2 parameters\\");

      return bridging::callFromJs<bool>(
          rt, &T::getBool, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Object getConstants(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getConstants) == 1,
          \\"Expected getConstants(...) to have 1 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getConstants, jsInvoker_, instance_);
    }
    jsi::Value getCustomEnum(jsi::Runtime &rt, jsi::Value arg) override {
      static_assert(
          bridging::getParameterCount(&T::getCustomEnum) == 2,
          \\"Expected getCustomEnum(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Value>(
          rt, &T::getCustomEnum, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Object getCustomHostObject(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getCustomHostObject) == 1,
          \\"Expected getCustomHostObject(...) to have 1 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getCustomHostObject, jsInvoker_, instance_);
    }
    jsi::String consumeCustomHostObject(jsi::Runtime &rt, jsi::Object customHostObject) override {
      static_assert(
          bridging::getParameterCount(&T::consumeCustomHostObject) == 2,
          \\"Expected consumeCustomHostObject(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::String>(
          rt, &T::consumeCustomHostObject, jsInvoker_, instance_, std::move(customHostObject));
    }
    jsi::Object getBinaryTreeNode(jsi::Runtime &rt, jsi::Object arg) override {
      static_assert(
          bridging::getParameterCount(&T::getBinaryTreeNode) == 2,
          \\"Expected getBinaryTreeNode(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getBinaryTreeNode, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Object getGraphNode(jsi::Runtime &rt, jsi::Object arg) override {
      static_assert(
          bridging::getParameterCount(&T::getGraphNode) == 2,
          \\"Expected getGraphNode(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getGraphNode, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Value getNumEnum(jsi::Runtime &rt, jsi::Value arg) override {
      static_assert(
          bridging::getParameterCount(&T::getNumEnum) == 2,
          \\"Expected getNumEnum(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Value>(
          rt, &T::getNumEnum, jsInvoker_, instance_, std::move(arg));
    }
    jsi::String getStrEnum(jsi::Runtime &rt, jsi::String arg) override {
      static_assert(
          bridging::getParameterCount(&T::getStrEnum) == 2,
          \\"Expected getStrEnum(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::String>(
          rt, &T::getStrEnum, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Object getMap(jsi::Runtime &rt, jsi::Object arg) override {
      static_assert(
          bridging::getParameterCount(&T::getMap) == 2,
          \\"Expected getMap(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getMap, jsInvoker_, instance_, std::move(arg));
    }
    double getNumber(jsi::Runtime &rt, double arg) override {
      static_assert(
          bridging::getParameterCount(&T::getNumber) == 2,
          \\"Expected getNumber(...) to have 2 parameters\\");

      return bridging::callFromJs<double>(
          rt, &T::getNumber, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Object getObject(jsi::Runtime &rt, jsi::Object arg) override {
      static_assert(
          bridging::getParameterCount(&T::getObject) == 2,
          \\"Expected getObject(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getObject, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Array getSet(jsi::Runtime &rt, jsi::Array arg) override {
      static_assert(
          bridging::getParameterCount(&T::getSet) == 2,
          \\"Expected getSet(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Array>(
          rt, &T::getSet, jsInvoker_, instance_, std::move(arg));
    }
    jsi::String getString(jsi::Runtime &rt, jsi::String arg) override {
      static_assert(
          bridging::getParameterCount(&T::getString) == 2,
          \\"Expected getString(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::String>(
          rt, &T::getString, jsInvoker_, instance_, std::move(arg));
    }
    jsi::String getUnion(jsi::Runtime &rt, double x, jsi::String y, jsi::String y-literal, jsi::Object z) override {
      static_assert(
          bridging::getParameterCount(&T::getUnion) == 5,
          \\"Expected getUnion(...) to have 5 parameters\\");

      return bridging::callFromJs<jsi::String>(
          rt, &T::getUnion, jsInvoker_, instance_, std::move(x), std::move(y), std::move(y-literal), std::move(z));
    }
    jsi::Object getValue(jsi::Runtime &rt, double x, jsi::String y, jsi::Object z) override {
      static_assert(
          bridging::getParameterCount(&T::getValue) == 4,
          \\"Expected getValue(...) to have 4 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getValue, jsInvoker_, instance_, std::move(x), std::move(y), std::move(z));
    }
    void getValueWithCallback(jsi::Runtime &rt, jsi::Function callback) override {
      static_assert(
          bridging::getParameterCount(&T::getValueWithCallback) == 2,
          \\"Expected getValueWithCallback(...) to have 2 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::getValueWithCallback, jsInvoker_, instance_, std::move(callback));
    }
    jsi::Value getValueWithPromise(jsi::Runtime &rt, bool error) override {
      static_assert(
          bridging::getParameterCount(&T::getValueWithPromise) == 2,
          \\"Expected getValueWithPromise(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Value>(
          rt, &T::getValueWithPromise, jsInvoker_, instance_, std::move(error));
    }
    std::optional<bool> getWithWithOptionalArgs(jsi::Runtime &rt, std::optional<bool> optionalArg) override {
      static_assert(
          bridging::getParameterCount(&T::getWithWithOptionalArgs) == 2,
          \\"Expected getWithWithOptionalArgs(...) to have 2 parameters\\");

      return bridging::callFromJs<std::optional<bool>>(
          rt, &T::getWithWithOptionalArgs, jsInvoker_, instance_, std::move(optionalArg));
    }
    void voidFunc(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::voidFunc) == 1,
          \\"Expected voidFunc(...) to have 1 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::voidFunc, jsInvoker_, instance_);
    }
    void setMenu(jsi::Runtime &rt, jsi::Object menuItem) override {
      static_assert(
          bridging::getParameterCount(&T::setMenu) == 2,
          \\"Expected setMenu(...) to have 2 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::setMenu, jsInvoker_, instance_, std::move(menuItem));
    }
    void emitCustomDeviceEvent(jsi::Runtime &rt, jsi::String eventName) override {
      static_assert(
          bridging::getParameterCount(&T::emitCustomDeviceEvent) == 2,
          \\"Expected emitCustomDeviceEvent(...) to have 2 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::emitCustomDeviceEvent, jsInvoker_, instance_, std::move(eventName));
    }
    void voidFuncThrows(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::voidFuncThrows) == 1,
          \\"Expected voidFuncThrows(...) to have 1 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::voidFuncThrows, jsInvoker_, instance_);
    }
    jsi::Object getObjectThrows(jsi::Runtime &rt, jsi::Object arg) override {
      static_assert(
          bridging::getParameterCount(&T::getObjectThrows) == 2,
          \\"Expected getObjectThrows(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getObjectThrows, jsInvoker_, instance_, std::move(arg));
    }
    void voidFuncAssert(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::voidFuncAssert) == 1,
          \\"Expected voidFuncAssert(...) to have 1 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::voidFuncAssert, jsInvoker_, instance_);
    }
    jsi::Object getObjectAssert(jsi::Runtime &rt, jsi::Object arg) override {
      static_assert(
          bridging::getParameterCount(&T::getObjectAssert) == 2,
          \\"Expected getObjectAssert(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getObjectAssert, jsInvoker_, instance_, std::move(arg));
    }

  private:
    friend class NativeSampleTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture empty_native_modules 1`] = `
Map {
  "empty_native_modulesJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


  class JSI_EXPORT NativeSampleTurboModuleCxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModule\\";

protected:
  NativeSampleTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeSampleTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    

  private:
    friend class NativeSampleTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture event_emitter_module 1`] = `
Map {
  "event_emitter_moduleJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


  
#pragma mark - NativeSampleTurboModuleObjectStruct

template <typename P0, typename P1, typename P2>
struct NativeSampleTurboModuleObjectStruct {
  P0 a{};
  P1 b{};
  P2 c{};

  bool operator==(const NativeSampleTurboModuleObjectStruct &other) const {
    return a == other.a && b == other.b && c == other.c;
  }
};

template <typename T>
struct NativeSampleTurboModuleObjectStructBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.a)>(rt, value.getProperty(rt, \\"a\\"), jsInvoker),
      bridging::fromJs<decltype(types.b)>(rt, value.getProperty(rt, \\"b\\"), jsInvoker),
      bridging::fromJs<decltype(types.c)>(rt, value.getProperty(rt, \\"c\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static double aToJs(jsi::Runtime &rt, decltype(types.a) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String bToJs(jsi::Runtime &rt, decltype(types.b) value) {
    return bridging::toJs(rt, value);
  }

  static std::optional<jsi::String> cToJs(jsi::Runtime &rt, decltype(types.c) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"a\\", bridging::toJs(rt, value.a, jsInvoker));
    result.setProperty(rt, \\"b\\", bridging::toJs(rt, value.b, jsInvoker));
    if (value.c) {
      result.setProperty(rt, \\"c\\", bridging::toJs(rt, value.c.value(), jsInvoker));
    }
    return result;
  }
};

class JSI_EXPORT NativeSampleTurboModuleCxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual void voidFunc(jsi::Runtime &rt) = 0;

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModule\\";

protected:
  NativeSampleTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}

  void emitOnEvent1() {
    static_cast<AsyncEventEmitter<>&>(*delegate_.eventEmitterMap_[\\"onEvent1\\"]).emit();
  }

  template <typename OnEvent2Type> void emitOnEvent2(OnEvent2Type value) {
    static_assert(bridging::supportsFromJs<OnEvent2Type, jsi::String>, \\"value cannnot be converted to jsi::String\\");
    static_cast<AsyncEventEmitter<jsi::Value>&>(*delegate_.eventEmitterMap_[\\"onEvent2\\"]).emit([jsInvoker = jsInvoker_, eventValue = value](jsi::Runtime& rt) -> jsi::Value {
      return bridging::toJs(rt, eventValue, jsInvoker);
    });
  }

  template <typename OnEvent3Type> void emitOnEvent3(OnEvent3Type value) {
    static_assert(bridging::supportsFromJs<OnEvent3Type, double>, \\"value cannnot be converted to double\\");
    static_cast<AsyncEventEmitter<jsi::Value>&>(*delegate_.eventEmitterMap_[\\"onEvent3\\"]).emit([jsInvoker = jsInvoker_, eventValue = value](jsi::Runtime& rt) -> jsi::Value {
      return bridging::toJs(rt, eventValue, jsInvoker);
    });
  }

  template <typename OnEvent4Type> void emitOnEvent4(OnEvent4Type value) {
    static_assert(bridging::supportsFromJs<OnEvent4Type, bool>, \\"value cannnot be converted to bool\\");
    static_cast<AsyncEventEmitter<jsi::Value>&>(*delegate_.eventEmitterMap_[\\"onEvent4\\"]).emit([jsInvoker = jsInvoker_, eventValue = value](jsi::Runtime& rt) -> jsi::Value {
      return bridging::toJs(rt, eventValue, jsInvoker);
    });
  }

  template <typename OnEvent5Type> void emitOnEvent5(OnEvent5Type value) {
    static_assert(bridging::supportsFromJs<OnEvent5Type, jsi::Object>, \\"value cannnot be converted to jsi::Object\\");
    static_cast<AsyncEventEmitter<jsi::Value>&>(*delegate_.eventEmitterMap_[\\"onEvent5\\"]).emit([jsInvoker = jsInvoker_, eventValue = value](jsi::Runtime& rt) -> jsi::Value {
      return bridging::toJs(rt, eventValue, jsInvoker);
    });
  }

  template <typename OnEvent6Type> void emitOnEvent6(std::vector<OnEvent6Type> value) {
    static_assert(bridging::supportsFromJs<std::vector<OnEvent6Type>, jsi::Array>, \\"value cannnot be converted to jsi::Array\\");
    static_cast<AsyncEventEmitter<jsi::Value>&>(*delegate_.eventEmitterMap_[\\"onEvent6\\"]).emit([jsInvoker = jsInvoker_, eventValue = value](jsi::Runtime& rt) -> jsi::Value {
      return bridging::toJs(rt, eventValue, jsInvoker);
    });
  }

private:
  class Delegate : public NativeSampleTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {
      eventEmitterMap_[\\"onEvent1\\"] = std::make_shared<AsyncEventEmitter<>>();
      eventEmitterMap_[\\"onEvent2\\"] = std::make_shared<AsyncEventEmitter<jsi::Value>>();
      eventEmitterMap_[\\"onEvent3\\"] = std::make_shared<AsyncEventEmitter<jsi::Value>>();
      eventEmitterMap_[\\"onEvent4\\"] = std::make_shared<AsyncEventEmitter<jsi::Value>>();
      eventEmitterMap_[\\"onEvent5\\"] = std::make_shared<AsyncEventEmitter<jsi::Value>>();
      eventEmitterMap_[\\"onEvent6\\"] = std::make_shared<AsyncEventEmitter<jsi::Value>>();
    }

    void voidFunc(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::voidFunc) == 1,
          \\"Expected voidFunc(...) to have 1 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::voidFunc, jsInvoker_, instance_);
    }

  private:
    friend class NativeSampleTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture native_modules_with_type_aliases 1`] = `
Map {
  "native_modules_with_type_aliasesJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


  
#pragma mark - AliasTurboModuleOptions

template <typename P0, typename P1, typename P2, typename P3, typename P4>
struct AliasTurboModuleOptions {
  P0 offset{};
  P1 size{};
  P2 displaySize{};
  P3 resizeMode{};
  P4 allowExternalStorage{};

  bool operator==(const AliasTurboModuleOptions &other) const {
    return offset == other.offset && size == other.size && displaySize == other.displaySize && resizeMode == other.resizeMode && allowExternalStorage == other.allowExternalStorage;
  }
};

template <typename T>
struct AliasTurboModuleOptionsBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.offset)>(rt, value.getProperty(rt, \\"offset\\"), jsInvoker),
      bridging::fromJs<decltype(types.size)>(rt, value.getProperty(rt, \\"size\\"), jsInvoker),
      bridging::fromJs<decltype(types.displaySize)>(rt, value.getProperty(rt, \\"displaySize\\"), jsInvoker),
      bridging::fromJs<decltype(types.resizeMode)>(rt, value.getProperty(rt, \\"resizeMode\\"), jsInvoker),
      bridging::fromJs<decltype(types.allowExternalStorage)>(rt, value.getProperty(rt, \\"allowExternalStorage\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static jsi::Object offsetToJs(jsi::Runtime &rt, decltype(types.offset) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Object sizeToJs(jsi::Runtime &rt, decltype(types.size) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Object displaySizeToJs(jsi::Runtime &rt, decltype(types.displaySize) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String resizeModeToJs(jsi::Runtime &rt, decltype(types.resizeMode) value) {
    return bridging::toJs(rt, value);
  }

  static bool allowExternalStorageToJs(jsi::Runtime &rt, decltype(types.allowExternalStorage) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"offset\\", bridging::toJs(rt, value.offset, jsInvoker));
    result.setProperty(rt, \\"size\\", bridging::toJs(rt, value.size, jsInvoker));
    if (value.displaySize) {
      result.setProperty(rt, \\"displaySize\\", bridging::toJs(rt, value.displaySize.value(), jsInvoker));
    }
    if (value.resizeMode) {
      result.setProperty(rt, \\"resizeMode\\", bridging::toJs(rt, value.resizeMode.value(), jsInvoker));
    }
    if (value.allowExternalStorage) {
      result.setProperty(rt, \\"allowExternalStorage\\", bridging::toJs(rt, value.allowExternalStorage.value(), jsInvoker));
    }
    return result;
  }
};

class JSI_EXPORT AliasTurboModuleCxxSpecJSI : public TurboModule {
protected:
  AliasTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual jsi::Object getConstants(jsi::Runtime &rt) = 0;
  virtual void cropImage(jsi::Runtime &rt, jsi::Object cropData) = 0;

};

template <typename T>
class JSI_EXPORT AliasTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"AliasTurboModule\\";

protected:
  AliasTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{AliasTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public AliasTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      AliasTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    jsi::Object getConstants(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getConstants) == 1,
          \\"Expected getConstants(...) to have 1 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getConstants, jsInvoker_, instance_);
    }
    void cropImage(jsi::Runtime &rt, jsi::Object cropData) override {
      static_assert(
          bridging::getParameterCount(&T::cropImage) == 2,
          \\"Expected cropImage(...) to have 2 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::cropImage, jsInvoker_, instance_, std::move(cropData));
    }

  private:
    friend class AliasTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture real_module_example 1`] = `
Map {
  "real_module_exampleJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


  
#pragma mark - NativeCameraRollManagerPhotoIdentifierImage

template <typename P0, typename P1, typename P2, typename P3, typename P4, typename P5>
struct NativeCameraRollManagerPhotoIdentifierImage {
  P0 uri{};
  P1 playableDuration{};
  P2 width{};
  P3 height{};
  P4 isStored{};
  P5 filename{};

  bool operator==(const NativeCameraRollManagerPhotoIdentifierImage &other) const {
    return uri == other.uri && playableDuration == other.playableDuration && width == other.width && height == other.height && isStored == other.isStored && filename == other.filename;
  }
};

template <typename T>
struct NativeCameraRollManagerPhotoIdentifierImageBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.uri)>(rt, value.getProperty(rt, \\"uri\\"), jsInvoker),
      bridging::fromJs<decltype(types.playableDuration)>(rt, value.getProperty(rt, \\"playableDuration\\"), jsInvoker),
      bridging::fromJs<decltype(types.width)>(rt, value.getProperty(rt, \\"width\\"), jsInvoker),
      bridging::fromJs<decltype(types.height)>(rt, value.getProperty(rt, \\"height\\"), jsInvoker),
      bridging::fromJs<decltype(types.isStored)>(rt, value.getProperty(rt, \\"isStored\\"), jsInvoker),
      bridging::fromJs<decltype(types.filename)>(rt, value.getProperty(rt, \\"filename\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static jsi::String uriToJs(jsi::Runtime &rt, decltype(types.uri) value) {
    return bridging::toJs(rt, value);
  }

  static double playableDurationToJs(jsi::Runtime &rt, decltype(types.playableDuration) value) {
    return bridging::toJs(rt, value);
  }

  static double widthToJs(jsi::Runtime &rt, decltype(types.width) value) {
    return bridging::toJs(rt, value);
  }

  static double heightToJs(jsi::Runtime &rt, decltype(types.height) value) {
    return bridging::toJs(rt, value);
  }

  static bool isStoredToJs(jsi::Runtime &rt, decltype(types.isStored) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String filenameToJs(jsi::Runtime &rt, decltype(types.filename) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"uri\\", bridging::toJs(rt, value.uri, jsInvoker));
    result.setProperty(rt, \\"playableDuration\\", bridging::toJs(rt, value.playableDuration, jsInvoker));
    result.setProperty(rt, \\"width\\", bridging::toJs(rt, value.width, jsInvoker));
    result.setProperty(rt, \\"height\\", bridging::toJs(rt, value.height, jsInvoker));
    if (value.isStored) {
      result.setProperty(rt, \\"isStored\\", bridging::toJs(rt, value.isStored.value(), jsInvoker));
    }
    result.setProperty(rt, \\"filename\\", bridging::toJs(rt, value.filename, jsInvoker));
    return result;
  }
};



#pragma mark - NativeCameraRollManagerPhotoIdentifier

template <typename P0>
struct NativeCameraRollManagerPhotoIdentifier {
  P0 node{};

  bool operator==(const NativeCameraRollManagerPhotoIdentifier &other) const {
    return node == other.node;
  }
};

template <typename T>
struct NativeCameraRollManagerPhotoIdentifierBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.node)>(rt, value.getProperty(rt, \\"node\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static jsi::Object nodeToJs(jsi::Runtime &rt, decltype(types.node) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"node\\", bridging::toJs(rt, value.node, jsInvoker));
    return result;
  }
};



#pragma mark - NativeCameraRollManagerPhotoIdentifiersPage

template <typename P0, typename P1>
struct NativeCameraRollManagerPhotoIdentifiersPage {
  P0 edges{};
  P1 page_info{};

  bool operator==(const NativeCameraRollManagerPhotoIdentifiersPage &other) const {
    return edges == other.edges && page_info == other.page_info;
  }
};

template <typename T>
struct NativeCameraRollManagerPhotoIdentifiersPageBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.edges)>(rt, value.getProperty(rt, \\"edges\\"), jsInvoker),
      bridging::fromJs<decltype(types.page_info)>(rt, value.getProperty(rt, \\"page_info\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static jsi::Array edgesToJs(jsi::Runtime &rt, decltype(types.edges) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Object page_infoToJs(jsi::Runtime &rt, decltype(types.page_info) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"edges\\", bridging::toJs(rt, value.edges, jsInvoker));
    result.setProperty(rt, \\"page_info\\", bridging::toJs(rt, value.page_info, jsInvoker));
    return result;
  }
};



#pragma mark - NativeCameraRollManagerGetPhotosParams

template <typename P0, typename P1, typename P2, typename P3, typename P4, typename P5, typename P6>
struct NativeCameraRollManagerGetPhotosParams {
  P0 first{};
  P1 after{};
  P2 groupName{};
  P3 groupTypes{};
  P4 assetType{};
  P5 maxSize{};
  P6 mimeTypes{};

  bool operator==(const NativeCameraRollManagerGetPhotosParams &other) const {
    return first == other.first && after == other.after && groupName == other.groupName && groupTypes == other.groupTypes && assetType == other.assetType && maxSize == other.maxSize && mimeTypes == other.mimeTypes;
  }
};

template <typename T>
struct NativeCameraRollManagerGetPhotosParamsBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.first)>(rt, value.getProperty(rt, \\"first\\"), jsInvoker),
      bridging::fromJs<decltype(types.after)>(rt, value.getProperty(rt, \\"after\\"), jsInvoker),
      bridging::fromJs<decltype(types.groupName)>(rt, value.getProperty(rt, \\"groupName\\"), jsInvoker),
      bridging::fromJs<decltype(types.groupTypes)>(rt, value.getProperty(rt, \\"groupTypes\\"), jsInvoker),
      bridging::fromJs<decltype(types.assetType)>(rt, value.getProperty(rt, \\"assetType\\"), jsInvoker),
      bridging::fromJs<decltype(types.maxSize)>(rt, value.getProperty(rt, \\"maxSize\\"), jsInvoker),
      bridging::fromJs<decltype(types.mimeTypes)>(rt, value.getProperty(rt, \\"mimeTypes\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static double firstToJs(jsi::Runtime &rt, decltype(types.first) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String afterToJs(jsi::Runtime &rt, decltype(types.after) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String groupNameToJs(jsi::Runtime &rt, decltype(types.groupName) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String groupTypesToJs(jsi::Runtime &rt, decltype(types.groupTypes) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String assetTypeToJs(jsi::Runtime &rt, decltype(types.assetType) value) {
    return bridging::toJs(rt, value);
  }

  static double maxSizeToJs(jsi::Runtime &rt, decltype(types.maxSize) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Array mimeTypesToJs(jsi::Runtime &rt, decltype(types.mimeTypes) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"first\\", bridging::toJs(rt, value.first, jsInvoker));
    if (value.after) {
      result.setProperty(rt, \\"after\\", bridging::toJs(rt, value.after.value(), jsInvoker));
    }
    if (value.groupName) {
      result.setProperty(rt, \\"groupName\\", bridging::toJs(rt, value.groupName.value(), jsInvoker));
    }
    if (value.groupTypes) {
      result.setProperty(rt, \\"groupTypes\\", bridging::toJs(rt, value.groupTypes.value(), jsInvoker));
    }
    if (value.assetType) {
      result.setProperty(rt, \\"assetType\\", bridging::toJs(rt, value.assetType.value(), jsInvoker));
    }
    if (value.maxSize) {
      result.setProperty(rt, \\"maxSize\\", bridging::toJs(rt, value.maxSize.value(), jsInvoker));
    }
    if (value.mimeTypes) {
      result.setProperty(rt, \\"mimeTypes\\", bridging::toJs(rt, value.mimeTypes.value(), jsInvoker));
    }
    return result;
  }
};

class JSI_EXPORT NativeCameraRollManagerCxxSpecJSI : public TurboModule {
protected:
  NativeCameraRollManagerCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual jsi::Object getConstants(jsi::Runtime &rt) = 0;
  virtual jsi::Value getPhotos(jsi::Runtime &rt, jsi::Object params) = 0;
  virtual jsi::Value saveToCameraRoll(jsi::Runtime &rt, jsi::String uri, jsi::String type) = 0;
  virtual jsi::Value deletePhotos(jsi::Runtime &rt, jsi::Array assets) = 0;

};

template <typename T>
class JSI_EXPORT NativeCameraRollManagerCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"CameraRollManager\\";

protected:
  NativeCameraRollManagerCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeCameraRollManagerCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeCameraRollManagerCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeCameraRollManagerCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    jsi::Object getConstants(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getConstants) == 1,
          \\"Expected getConstants(...) to have 1 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getConstants, jsInvoker_, instance_);
    }
    jsi::Value getPhotos(jsi::Runtime &rt, jsi::Object params) override {
      static_assert(
          bridging::getParameterCount(&T::getPhotos) == 2,
          \\"Expected getPhotos(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Value>(
          rt, &T::getPhotos, jsInvoker_, instance_, std::move(params));
    }
    jsi::Value saveToCameraRoll(jsi::Runtime &rt, jsi::String uri, jsi::String type) override {
      static_assert(
          bridging::getParameterCount(&T::saveToCameraRoll) == 3,
          \\"Expected saveToCameraRoll(...) to have 3 parameters\\");

      return bridging::callFromJs<jsi::Value>(
          rt, &T::saveToCameraRoll, jsInvoker_, instance_, std::move(uri), std::move(type));
    }
    jsi::Value deletePhotos(jsi::Runtime &rt, jsi::Array assets) override {
      static_assert(
          bridging::getParameterCount(&T::deletePhotos) == 2,
          \\"Expected deletePhotos(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Value>(
          rt, &T::deletePhotos, jsInvoker_, instance_, std::move(assets));
    }

  private:
    friend class NativeCameraRollManagerCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};


  
#pragma mark - NativeExceptionsManagerStackFrame

template <typename P0, typename P1, typename P2, typename P3, typename P4>
struct NativeExceptionsManagerStackFrame {
  P0 column{};
  P1 file{};
  P2 lineNumber{};
  P3 methodName{};
  P4 collapse{};

  bool operator==(const NativeExceptionsManagerStackFrame &other) const {
    return column == other.column && file == other.file && lineNumber == other.lineNumber && methodName == other.methodName && collapse == other.collapse;
  }
};

template <typename T>
struct NativeExceptionsManagerStackFrameBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.column)>(rt, value.getProperty(rt, \\"column\\"), jsInvoker),
      bridging::fromJs<decltype(types.file)>(rt, value.getProperty(rt, \\"file\\"), jsInvoker),
      bridging::fromJs<decltype(types.lineNumber)>(rt, value.getProperty(rt, \\"lineNumber\\"), jsInvoker),
      bridging::fromJs<decltype(types.methodName)>(rt, value.getProperty(rt, \\"methodName\\"), jsInvoker),
      bridging::fromJs<decltype(types.collapse)>(rt, value.getProperty(rt, \\"collapse\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static double columnToJs(jsi::Runtime &rt, decltype(types.column) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String fileToJs(jsi::Runtime &rt, decltype(types.file) value) {
    return bridging::toJs(rt, value);
  }

  static double lineNumberToJs(jsi::Runtime &rt, decltype(types.lineNumber) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String methodNameToJs(jsi::Runtime &rt, decltype(types.methodName) value) {
    return bridging::toJs(rt, value);
  }

  static bool collapseToJs(jsi::Runtime &rt, decltype(types.collapse) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    if (value.column) {
      result.setProperty(rt, \\"column\\", bridging::toJs(rt, value.column.value(), jsInvoker));
    }
    result.setProperty(rt, \\"file\\", bridging::toJs(rt, value.file, jsInvoker));
    if (value.lineNumber) {
      result.setProperty(rt, \\"lineNumber\\", bridging::toJs(rt, value.lineNumber.value(), jsInvoker));
    }
    result.setProperty(rt, \\"methodName\\", bridging::toJs(rt, value.methodName, jsInvoker));
    if (value.collapse) {
      result.setProperty(rt, \\"collapse\\", bridging::toJs(rt, value.collapse.value(), jsInvoker));
    }
    return result;
  }
};



#pragma mark - NativeExceptionsManagerExceptionData

template <typename P0, typename P1, typename P2, typename P3, typename P4, typename P5, typename P6, typename P7>
struct NativeExceptionsManagerExceptionData {
  P0 message{};
  P1 originalMessage{};
  P2 name{};
  P3 componentStack{};
  P4 stack{};
  P5 id{};
  P6 isFatal{};
  P7 extraData{};

  bool operator==(const NativeExceptionsManagerExceptionData &other) const {
    return message == other.message && originalMessage == other.originalMessage && name == other.name && componentStack == other.componentStack && stack == other.stack && id == other.id && isFatal == other.isFatal && extraData == other.extraData;
  }
};

template <typename T>
struct NativeExceptionsManagerExceptionDataBridging {
  static T types;

  static T fromJs(
      jsi::Runtime &rt,
      const jsi::Object &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    T result{
      bridging::fromJs<decltype(types.message)>(rt, value.getProperty(rt, \\"message\\"), jsInvoker),
      bridging::fromJs<decltype(types.originalMessage)>(rt, value.getProperty(rt, \\"originalMessage\\"), jsInvoker),
      bridging::fromJs<decltype(types.name)>(rt, value.getProperty(rt, \\"name\\"), jsInvoker),
      bridging::fromJs<decltype(types.componentStack)>(rt, value.getProperty(rt, \\"componentStack\\"), jsInvoker),
      bridging::fromJs<decltype(types.stack)>(rt, value.getProperty(rt, \\"stack\\"), jsInvoker),
      bridging::fromJs<decltype(types.id)>(rt, value.getProperty(rt, \\"id\\"), jsInvoker),
      bridging::fromJs<decltype(types.isFatal)>(rt, value.getProperty(rt, \\"isFatal\\"), jsInvoker),
      bridging::fromJs<decltype(types.extraData)>(rt, value.getProperty(rt, \\"extraData\\"), jsInvoker)};
    return result;
  }

#ifdef DEBUG
  static jsi::String messageToJs(jsi::Runtime &rt, decltype(types.message) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String originalMessageToJs(jsi::Runtime &rt, decltype(types.originalMessage) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String nameToJs(jsi::Runtime &rt, decltype(types.name) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::String componentStackToJs(jsi::Runtime &rt, decltype(types.componentStack) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Array stackToJs(jsi::Runtime &rt, decltype(types.stack) value) {
    return bridging::toJs(rt, value);
  }

  static double idToJs(jsi::Runtime &rt, decltype(types.id) value) {
    return bridging::toJs(rt, value);
  }

  static bool isFatalToJs(jsi::Runtime &rt, decltype(types.isFatal) value) {
    return bridging::toJs(rt, value);
  }

  static jsi::Object extraDataToJs(jsi::Runtime &rt, decltype(types.extraData) value) {
    return bridging::toJs(rt, value);
  }
#endif

  static jsi::Object toJs(
      jsi::Runtime &rt,
      const T &value,
      const std::shared_ptr<CallInvoker> &jsInvoker) {
    auto result = facebook::jsi::Object(rt);
    result.setProperty(rt, \\"message\\", bridging::toJs(rt, value.message, jsInvoker));
    result.setProperty(rt, \\"originalMessage\\", bridging::toJs(rt, value.originalMessage, jsInvoker));
    result.setProperty(rt, \\"name\\", bridging::toJs(rt, value.name, jsInvoker));
    result.setProperty(rt, \\"componentStack\\", bridging::toJs(rt, value.componentStack, jsInvoker));
    result.setProperty(rt, \\"stack\\", bridging::toJs(rt, value.stack, jsInvoker));
    result.setProperty(rt, \\"id\\", bridging::toJs(rt, value.id, jsInvoker));
    result.setProperty(rt, \\"isFatal\\", bridging::toJs(rt, value.isFatal, jsInvoker));
    if (value.extraData) {
      result.setProperty(rt, \\"extraData\\", bridging::toJs(rt, value.extraData.value(), jsInvoker));
    }
    return result;
  }
};

class JSI_EXPORT NativeExceptionsManagerCxxSpecJSI : public TurboModule {
protected:
  NativeExceptionsManagerCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual void reportFatalException(jsi::Runtime &rt, jsi::String message, jsi::Array stack, double exceptionId) = 0;
  virtual void reportSoftException(jsi::Runtime &rt, jsi::String message, jsi::Array stack, double exceptionId) = 0;
  virtual void reportException(jsi::Runtime &rt, jsi::Object data) = 0;
  virtual void updateExceptionMessage(jsi::Runtime &rt, jsi::String message, jsi::Array stack, double exceptionId) = 0;
  virtual void dismissRedbox(jsi::Runtime &rt) = 0;

};

template <typename T>
class JSI_EXPORT NativeExceptionsManagerCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"ExceptionsManager\\";

protected:
  NativeExceptionsManagerCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeExceptionsManagerCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeExceptionsManagerCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeExceptionsManagerCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    void reportFatalException(jsi::Runtime &rt, jsi::String message, jsi::Array stack, double exceptionId) override {
      static_assert(
          bridging::getParameterCount(&T::reportFatalException) == 4,
          \\"Expected reportFatalException(...) to have 4 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::reportFatalException, jsInvoker_, instance_, std::move(message), std::move(stack), std::move(exceptionId));
    }
    void reportSoftException(jsi::Runtime &rt, jsi::String message, jsi::Array stack, double exceptionId) override {
      static_assert(
          bridging::getParameterCount(&T::reportSoftException) == 4,
          \\"Expected reportSoftException(...) to have 4 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::reportSoftException, jsInvoker_, instance_, std::move(message), std::move(stack), std::move(exceptionId));
    }
    void reportException(jsi::Runtime &rt, jsi::Object data) override {
      static_assert(
          bridging::getParameterCount(&T::reportException) == 2,
          \\"Expected reportException(...) to have 2 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::reportException, jsInvoker_, instance_, std::move(data));
    }
    void updateExceptionMessage(jsi::Runtime &rt, jsi::String message, jsi::Array stack, double exceptionId) override {
      static_assert(
          bridging::getParameterCount(&T::updateExceptionMessage) == 4,
          \\"Expected updateExceptionMessage(...) to have 4 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::updateExceptionMessage, jsInvoker_, instance_, std::move(message), std::move(stack), std::move(exceptionId));
    }
    void dismissRedbox(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::dismissRedbox) == 1,
          \\"Expected dismissRedbox(...) to have 1 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::dismissRedbox, jsInvoker_, instance_);
    }

  private:
    friend class NativeExceptionsManagerCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture simple_native_modules 1`] = `
Map {
  "simple_native_modulesJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


#pragma mark - NativeSampleTurboModuleNumEnum

enum class NativeSampleTurboModuleNumEnum { ONE, TWO };

template <>
struct Bridging<NativeSampleTurboModuleNumEnum> {
  static NativeSampleTurboModuleNumEnum fromJs(jsi::Runtime &rt, const jsi::Value &rawValue) {
    double value = (double)rawValue.asNumber();
    if (value == 1) {
      return NativeSampleTurboModuleNumEnum::ONE;
    } else if (value == 2) {
      return NativeSampleTurboModuleNumEnum::TWO;
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for value in NativeSampleTurboModuleNumEnum\\");
    }
  }

  static jsi::Value toJs(jsi::Runtime &rt, NativeSampleTurboModuleNumEnum value) {
    if (value == NativeSampleTurboModuleNumEnum::ONE) {
      return bridging::toJs(rt, 1);
    } else if (value == NativeSampleTurboModuleNumEnum::TWO) {
      return bridging::toJs(rt, 2);
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for enum value in NativeSampleTurboModuleNumEnum\\");
    }
  }
};

#pragma mark - NativeSampleTurboModuleFloatEnum

enum class NativeSampleTurboModuleFloatEnum { POINT_ZERO, POINT_ONE, POINT_TWO };

template <>
struct Bridging<NativeSampleTurboModuleFloatEnum> {
  static NativeSampleTurboModuleFloatEnum fromJs(jsi::Runtime &rt, const jsi::Value &rawValue) {
    double value = (double)rawValue.asNumber();
    if (value == 0) {
      return NativeSampleTurboModuleFloatEnum::POINT_ZERO;
    } else if (value == 0.1) {
      return NativeSampleTurboModuleFloatEnum::POINT_ONE;
    } else if (value == 0.2) {
      return NativeSampleTurboModuleFloatEnum::POINT_TWO;
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for value in NativeSampleTurboModuleFloatEnum\\");
    }
  }

  static jsi::Value toJs(jsi::Runtime &rt, NativeSampleTurboModuleFloatEnum value) {
    if (value == NativeSampleTurboModuleFloatEnum::POINT_ZERO) {
      return bridging::toJs(rt, 0);
    } else if (value == NativeSampleTurboModuleFloatEnum::POINT_ONE) {
      return bridging::toJs(rt, 0.1);
    } else if (value == NativeSampleTurboModuleFloatEnum::POINT_TWO) {
      return bridging::toJs(rt, 0.2);
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for enum value in NativeSampleTurboModuleFloatEnum\\");
    }
  }
};

#pragma mark - NativeSampleTurboModuleStringEnum

enum class NativeSampleTurboModuleStringEnum { HELLO, GoodBye };

template <>
struct Bridging<NativeSampleTurboModuleStringEnum> {
  static NativeSampleTurboModuleStringEnum fromJs(jsi::Runtime &rt, const jsi::String &rawValue) {
    std::string value = rawValue.utf8(rt);
    if (value == \\"hello\\") {
      return NativeSampleTurboModuleStringEnum::HELLO;
    } else if (value == \\"goodbye\\") {
      return NativeSampleTurboModuleStringEnum::GoodBye;
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for value in NativeSampleTurboModuleStringEnum\\");
    }
  }

  static jsi::String toJs(jsi::Runtime &rt, NativeSampleTurboModuleStringEnum value) {
    if (value == NativeSampleTurboModuleStringEnum::HELLO) {
      return bridging::toJs(rt, \\"hello\\");
    } else if (value == NativeSampleTurboModuleStringEnum::GoodBye) {
      return bridging::toJs(rt, \\"goodbye\\");
    } else {
      throw jsi::JSError(rt, \\"No appropriate enum member found for enum value in NativeSampleTurboModuleStringEnum\\");
    }
  }
};
  class JSI_EXPORT NativeSampleTurboModuleCxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual jsi::Object getConstants(jsi::Runtime &rt) = 0;
  virtual void voidFunc(jsi::Runtime &rt) = 0;
  virtual bool getBool(jsi::Runtime &rt, bool arg) = 0;
  virtual double getNumber(jsi::Runtime &rt, double arg) = 0;
  virtual jsi::String getString(jsi::Runtime &rt, jsi::String arg) = 0;
  virtual jsi::Array getArray(jsi::Runtime &rt, jsi::Array arg) = 0;
  virtual jsi::Object getObject(jsi::Runtime &rt, jsi::Object arg) = 0;
  virtual double getRootTag(jsi::Runtime &rt, double arg) = 0;
  virtual jsi::Object getValue(jsi::Runtime &rt, double x, jsi::String y, jsi::Object z) = 0;
  virtual jsi::Value getEnumReturn(jsi::Runtime &rt) = 0;
  virtual void getValueWithCallback(jsi::Runtime &rt, jsi::Function callback) = 0;
  virtual jsi::Value getValueWithPromise(jsi::Runtime &rt, bool error) = 0;
  virtual jsi::Value getValueWithOptionalArg(jsi::Runtime &rt, std::optional<jsi::Object> parameter) = 0;
  virtual jsi::String getEnums(jsi::Runtime &rt, jsi::Value enumInt, jsi::Value enumFloat, jsi::String enumString) = 0;

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModule\\";

protected:
  NativeSampleTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeSampleTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    jsi::Object getConstants(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getConstants) == 1,
          \\"Expected getConstants(...) to have 1 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getConstants, jsInvoker_, instance_);
    }
    void voidFunc(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::voidFunc) == 1,
          \\"Expected voidFunc(...) to have 1 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::voidFunc, jsInvoker_, instance_);
    }
    bool getBool(jsi::Runtime &rt, bool arg) override {
      static_assert(
          bridging::getParameterCount(&T::getBool) == 2,
          \\"Expected getBool(...) to have 2 parameters\\");

      return bridging::callFromJs<bool>(
          rt, &T::getBool, jsInvoker_, instance_, std::move(arg));
    }
    double getNumber(jsi::Runtime &rt, double arg) override {
      static_assert(
          bridging::getParameterCount(&T::getNumber) == 2,
          \\"Expected getNumber(...) to have 2 parameters\\");

      return bridging::callFromJs<double>(
          rt, &T::getNumber, jsInvoker_, instance_, std::move(arg));
    }
    jsi::String getString(jsi::Runtime &rt, jsi::String arg) override {
      static_assert(
          bridging::getParameterCount(&T::getString) == 2,
          \\"Expected getString(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::String>(
          rt, &T::getString, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Array getArray(jsi::Runtime &rt, jsi::Array arg) override {
      static_assert(
          bridging::getParameterCount(&T::getArray) == 2,
          \\"Expected getArray(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Array>(
          rt, &T::getArray, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Object getObject(jsi::Runtime &rt, jsi::Object arg) override {
      static_assert(
          bridging::getParameterCount(&T::getObject) == 2,
          \\"Expected getObject(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getObject, jsInvoker_, instance_, std::move(arg));
    }
    double getRootTag(jsi::Runtime &rt, double arg) override {
      static_assert(
          bridging::getParameterCount(&T::getRootTag) == 2,
          \\"Expected getRootTag(...) to have 2 parameters\\");

      return bridging::callFromJs<double>(
          rt, &T::getRootTag, jsInvoker_, instance_, std::move(arg));
    }
    jsi::Object getValue(jsi::Runtime &rt, double x, jsi::String y, jsi::Object z) override {
      static_assert(
          bridging::getParameterCount(&T::getValue) == 4,
          \\"Expected getValue(...) to have 4 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getValue, jsInvoker_, instance_, std::move(x), std::move(y), std::move(z));
    }
    jsi::Value getEnumReturn(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getEnumReturn) == 1,
          \\"Expected getEnumReturn(...) to have 1 parameters\\");

      return bridging::callFromJs<jsi::Value>(
          rt, &T::getEnumReturn, jsInvoker_, instance_);
    }
    void getValueWithCallback(jsi::Runtime &rt, jsi::Function callback) override {
      static_assert(
          bridging::getParameterCount(&T::getValueWithCallback) == 2,
          \\"Expected getValueWithCallback(...) to have 2 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::getValueWithCallback, jsInvoker_, instance_, std::move(callback));
    }
    jsi::Value getValueWithPromise(jsi::Runtime &rt, bool error) override {
      static_assert(
          bridging::getParameterCount(&T::getValueWithPromise) == 2,
          \\"Expected getValueWithPromise(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Value>(
          rt, &T::getValueWithPromise, jsInvoker_, instance_, std::move(error));
    }
    jsi::Value getValueWithOptionalArg(jsi::Runtime &rt, std::optional<jsi::Object> parameter) override {
      static_assert(
          bridging::getParameterCount(&T::getValueWithOptionalArg) == 2,
          \\"Expected getValueWithOptionalArg(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::Value>(
          rt, &T::getValueWithOptionalArg, jsInvoker_, instance_, std::move(parameter));
    }
    jsi::String getEnums(jsi::Runtime &rt, jsi::Value enumInt, jsi::Value enumFloat, jsi::String enumString) override {
      static_assert(
          bridging::getParameterCount(&T::getEnums) == 4,
          \\"Expected getEnums(...) to have 4 parameters\\");

      return bridging::callFromJs<jsi::String>(
          rt, &T::getEnums, jsInvoker_, instance_, std::move(enumInt), std::move(enumFloat), std::move(enumString));
    }

  private:
    friend class NativeSampleTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture string_literals 1`] = `
Map {
  "string_literalsJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


  class JSI_EXPORT NativeSampleTurboModuleCxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual jsi::String getStringLiteral(jsi::Runtime &rt, jsi::String literalParam) = 0;

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModule\\";

protected:
  NativeSampleTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}

  template <typename LiteralEventType> void emitLiteralEvent(LiteralEventType value) {
    static_assert(bridging::supportsFromJs<LiteralEventType, jsi::String>, \\"value cannnot be converted to jsi::String\\");
    static_cast<AsyncEventEmitter<jsi::Value>&>(*delegate_.eventEmitterMap_[\\"literalEvent\\"]).emit([jsInvoker = jsInvoker_, eventValue = value](jsi::Runtime& rt) -> jsi::Value {
      return bridging::toJs(rt, eventValue, jsInvoker);
    });
  }

private:
  class Delegate : public NativeSampleTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {
      eventEmitterMap_[\\"literalEvent\\"] = std::make_shared<AsyncEventEmitter<jsi::Value>>();
    }

    jsi::String getStringLiteral(jsi::Runtime &rt, jsi::String literalParam) override {
      static_assert(
          bridging::getParameterCount(&T::getStringLiteral) == 2,
          \\"Expected getStringLiteral(...) to have 2 parameters\\");

      return bridging::callFromJs<jsi::String>(
          rt, &T::getStringLiteral, jsInvoker_, instance_, std::move(literalParam));
    }

  private:
    friend class NativeSampleTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture two_modules_different_files 1`] = `
Map {
  "two_modules_different_filesJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


  class JSI_EXPORT NativeSampleTurboModuleCxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual void voidFunc(jsi::Runtime &rt) = 0;

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModule\\";

protected:
  NativeSampleTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeSampleTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    void voidFunc(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::voidFunc) == 1,
          \\"Expected voidFunc(...) to have 1 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::voidFunc, jsInvoker_, instance_);
    }

  private:
    friend class NativeSampleTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};


  class JSI_EXPORT NativeSampleTurboModule2CxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModule2CxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual jsi::Object getConstants(jsi::Runtime &rt) = 0;
  virtual void voidFunc(jsi::Runtime &rt) = 0;

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModule2CxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModule2\\";

protected:
  NativeSampleTurboModule2CxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModule2CxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeSampleTurboModule2CxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModule2CxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    jsi::Object getConstants(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::getConstants) == 1,
          \\"Expected getConstants(...) to have 1 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getConstants, jsInvoker_, instance_);
    }
    void voidFunc(jsi::Runtime &rt) override {
      static_assert(
          bridging::getParameterCount(&T::voidFunc) == 1,
          \\"Expected voidFunc(...) to have 1 parameters\\");

      return bridging::callFromJs<void>(
          rt, &T::voidFunc, jsInvoker_, instance_);
    }

  private:
    friend class NativeSampleTurboModule2CxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;

exports[`GenerateModuleH can generate fixture union_module 1`] = `
Map {
  "union_moduleJSI.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateModuleH.js
 */

#pragma once

#include <ReactCommon/TurboModule.h>
#include <react/bridging/Bridging.h>

namespace facebook::react {


  class JSI_EXPORT NativeSampleTurboModuleCxxSpecJSI : public TurboModule {
protected:
  NativeSampleTurboModuleCxxSpecJSI(std::shared_ptr<CallInvoker> jsInvoker);

public:
  virtual jsi::Object getUnion(jsi::Runtime &rt, double chooseInt, double chooseFloat, jsi::Object chooseObject, jsi::String chooseString, jsi::String chooseStringLiteral) = 0;

};

template <typename T>
class JSI_EXPORT NativeSampleTurboModuleCxxSpec : public TurboModule {
public:
  jsi::Value create(jsi::Runtime &rt, const jsi::PropNameID &propName) override {
    return delegate_.create(rt, propName);
  }

  std::vector<jsi::PropNameID> getPropertyNames(jsi::Runtime& runtime) override {
    return delegate_.getPropertyNames(runtime);
  }

  static constexpr std::string_view kModuleName = \\"SampleTurboModule\\";

protected:
  NativeSampleTurboModuleCxxSpec(std::shared_ptr<CallInvoker> jsInvoker)
    : TurboModule(std::string{NativeSampleTurboModuleCxxSpec::kModuleName}, jsInvoker),
      delegate_(reinterpret_cast<T*>(this), jsInvoker) {}


private:
  class Delegate : public NativeSampleTurboModuleCxxSpecJSI {
  public:
    Delegate(T *instance, std::shared_ptr<CallInvoker> jsInvoker) :
      NativeSampleTurboModuleCxxSpecJSI(std::move(jsInvoker)), instance_(instance) {

    }

    jsi::Object getUnion(jsi::Runtime &rt, double chooseInt, double chooseFloat, jsi::Object chooseObject, jsi::String chooseString, jsi::String chooseStringLiteral) override {
      static_assert(
          bridging::getParameterCount(&T::getUnion) == 6,
          \\"Expected getUnion(...) to have 6 parameters\\");

      return bridging::callFromJs<jsi::Object>(
          rt, &T::getUnion, jsInvoker_, instance_, std::move(chooseInt), std::move(chooseFloat), std::move(chooseObject), std::move(chooseString), std::move(chooseStringLiteral));
    }

  private:
    friend class NativeSampleTurboModuleCxxSpec;
    T *instance_;
  };

  Delegate delegate_;
};

} // namespace facebook::react
",
}
`;
